<resources>
    <string name="app_name">Note Book</string>
    <string name="app_name_debug">N B Debug</string>
    <string name="input_group_title">输入分组标题</string>
    <string name="cancel">取消</string>
    <string name="create_group">创建列表</string>
    <string name="no_title_group">无标题分组%s</string>
    <string name="color">颜色</string>
    <string name="photo">照片</string>
    <string name="image">图片</string>
    <string name="del_group">删除分组</string>
    <string name="rename_group_title">重命名分组</string>
    <string name="delete">删除</string>
    <string name="share">分享</string>
    <string name="completed">完成</string>
    <string name="choose">选择</string>
    <string name="schedule">待办事项</string>
    <string name="task">任务</string>
    <string name="importance">重要</string>
    <string name="finished_schedule">已完成计划</string>
    <string name="show_finished_task">显示已完成任务</string>
    <string name="setting_end_date">设置截止日期</string>
    <string name="repetition">重复</string>
    <string name="remind_me">提醒我</string>
    <string name="_schedule">计划</string>
    <string name="_help">帮助</string>
    <string name="setting">设置</string>
    <string name="about">关于</string>
    <string name="version">版本</string>
    <string name="inform">通知</string>
    <string name="_quit">退出</string>
    <string name="_edit">编辑</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="_text_format">文本</string>
    <string name="clear_cache">缓存清理</string>
    <string name="check_app_version_update">检查更新</string>
    <string name="fresh_success">刷新成功</string>
    <string name="fresh_failure">刷新失败</string>
    <string name="loading">加载中&#8230;</string>
    <string name="loading_finish">加载完毕</string>
    <string name="load_more">加载更多</string>
    <string name="cache_cleared">缓存已清除</string>
    <string name="file_size_format_m">%.2f Mb</string>
    <string name="file_size_fromat_k">%.2f Kb</string>
    <string name="_button">按钮</string>
    <string name="_tips">提示</string>
    <string name="_main_page">首页</string>
    <string name="_application">应用</string>
    <string name="_position">确定</string>
    <string name="_negative">取消</string>
    <string name="launcher_application_format">是否启动 %s ？</string>
    <string name="_launcher_failure_format">启动 %s 失败</string>
    <string name="_save">保存</string>
    <string name="_is_repetition">是否重复执行? </string>
    <string name="_tag">标签</string>
    <string name="custom_repeat_date">自定义重复日期</string>
    <string name="_repeat">重复</string>
    <string name="_never">永不</string>
    <string name="_date_time_format_h_m">HH:mm</string>
    <string name="_date_time_format_M_d">%s月%s日</string>
    <string name="_date_week_1">周一</string>
    <string name="_date_week_2">周二</string>
    <string name="_date_week_3">周三</string>
    <string name="_date_week_4">周四</string>
    <string name="_date_week_5">周五</string>
    <string name="_date_week_6">周六</string>
    <string name="_date_week_7">周日</string>
    <string-array name="_date_week_array">
        <item>@string/_date_week_1</item>
        <item>@string/_date_week_2</item>
        <item>@string/_date_week_3</item>
        <item>@string/_date_week_4</item>
        <item>@string/_date_week_5</item>
        <item>@string/_date_week_6</item>
        <item>@string/_date_week_7</item>
    </string-array>
    <string name="schedule_type">计划类型</string>
    <string name="_launcher">启动</string>
    <string name="_nothing">无</string>
    <string name="_clock">闹钟</string>
    <string name="note_content_is_saved">内容已保存</string>
    <string name="note_content_have_change_is_saveable">内容有更改是否保存？</string>
    <string name="_finish">完成</string>
    <string name="_unfinished">未完成</string>
    <string name="_finished">已完成</string>
    <string name="_canceled">已取消</string>
    <string name="_timed_out">已超时</string>

    <string name="choose_image">选择图片</string>
    <string name="take_photo">拍照</string>
    <string name="choose_from_album">相册中选取</string>

    <string name="_record">记录</string>
    <string name="_record_title">记录标题</string>
    <string name="_record_describe">记录描述</string>
    <string name="_save_record_success">记录保存成功</string>
    <string name="_save_record_failure">记录保存失败</string>
    <string name="please_input_record_title">请输入记录标题</string>
    <string name="record_info_have_change_do_exit">记录信息有变化，是否退出？</string>

    <string name="search_record_content">查询记录</string>
    <string name="please_input_record_title_time">请输入记录标题、时间</string>

    <string name="show_float_window_about_countdown">是否显示倒计时浮窗？</string>
    <string name="_show">显示</string>
    <string name="_message">消息</string>

    <string name="_log">日志</string>
    <string name="operation_log">操作日志</string>
    <string name="system_log">系统日志</string>

    <string name="sys_file_list">系统文件</string>
    <string name="favorite">特别喜爱</string>
    <string name="user_info_service">用户信息服务</string>
    <string name="request_permission_storage_hint">读写系统文件需要获取文件存储权限，是否前往？</string>
    <string name="permission_to_open">可前往“设置-应用-权限”手动开启</string>
    <string name="notification_screen_title">上次使用</string>
    <string name="notification_screen_1_hint">上次使用时间：</string>
    <string name="notification_screen_2_hint">使用时长：</string>
    <string name="notification_screen_min_hint">上次使用时长：</string>
    <string name="_backup">备份</string>
    <string name="_add_content">添加</string>
    <string name="_add_record">添加记录</string>
    <string name="note_group_menu">笔记目录</string>
    <string name="_unknown">未知</string>

    <string name="_play_music">播放</string>
    <string name="_previous_music">上一曲</string>
    <string name="_next_music">下一曲</string>
    <string name="_base_duration_time">00:00</string>

    <string name="schedule_state_doing">进行中</string>
    <string name="schedule_state_done">完成</string>
    <string name="schedule_state_undo">未开始</string>

    <string name="_shock">震动</string>

    <string name="repeat_once">仅一次</string>
    <string name="every_day">每天</string>
    <string name="every_week">每周</string>
    <string name="every_month">每月</string>
    <string name="every_year">每年</string>
    <string name="every_year_lunar">每年（农历）</string>
    <string name="repeat_custom">自定义</string>

    <string name="_wallpaper">壁纸</string>
    <string name="system_wallpaper">系统壁纸</string>
    <string name="set_wallpaper">设置壁纸</string>
    <string name="set_wallpaper_service">设置壁纸服务</string>
    <string name="set_wallpaper_success">设置壁纸成功！</string>
    <string name="set_wallpaper_failure">设置壁纸失败！</string>

    <string name="set_as">设为</string>

    <string name="permission_request_set_wallpaper_success">设置壁纸权限获取成功！</string>
    <string name="permission_request_set_wallpaper_failure">设置壁纸权限获取失败！</string>
    <string name="permission_request_file_success">文件读写权限获取成功！</string>
    <string name="permission_request_file_failure">文件读写权限获取失败！</string>

    <string name="select_all">全选</string>
    <string name="unselect_all">取消全选</string>

    <string name="create_love_panel">创建日期版</string>
    <string name="_1">1</string>
    <string name="love_panel_template">Love_Panel_%s.jpg</string>
    <string name="love_panel_image">LovePanel</string>
    <string name="love_panel_image_is_created_please_update_timely">每日图片已生成，请及时更新</string>
    <string name="love_panel_image_is_created_no_duplicate_creation">每日图片已生成，请不要重复创建</string>
    <string name="love_panel_image_create_failure_please_retry">每日图片生成失败，请重试</string>
    <string name="love_panel_title_template">Day %s</string>
    <string name="love_panel_title_error">Love Day</string>

    <string name="_balance">余额</string>

    <string name="choose_note_group">选择笔记目录</string>

    <string name="day_event_calendar">事件日历</string>
    <string name="day_event_select_day_format">MM月dd日 %s</string>
    <string name="day_event_happen_day">event happen day.</string>
    <string name="day_event_loop_icon">event loop icon.</string>
    <string name="day_event_schedule">event schedule.</string>
    <string name="day_panel_temp">Day_Panel_%s.jpg</string>
    <string name="good_morning">早\n安。</string>
    <string name="lyric_ban_xin_shang_dong_feng">别借我一身孤勇\n我宁愿半梦半醒\n别赠我随意享用\n世间的疼痛\n别让我傍观看清\n你只是浮光掠影\n别送我盛筵美景\n皆是迷离惝恍大梦\n\n—————尚东峰《半醒》</string>
    <string name="lyric_shi_zi">我去过很多个地方\n那些故事很快就遗忘\n我不想看见谁悲伤\n就只是一个人游荡\n\n——三旬老汉《世子》</string>
    <string name="qrcode_content">QRCode 内容</string>
    <string name="day_panel_setting_save_success">Day Panel 保存成功。</string>
    <string name="day_panel_image_over_content">覆盖图片上内容</string>
    <string name="day_panel_image_left_content">左侧内容</string>
    <string name="day_panel_image_left_content_hint">仅显示前 6 行内容！！！</string>
</resources>
