<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/main_more_share_item"
        android:contentDescription="@string/share"
        android:icon="@drawable/ic_share_black_24dp"
        android:title="@string/share"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/main_more_backup_item"
        android:contentDescription="@string/_backup"
        android:icon="@drawable/ic_baseline_backup_24"
        android:title="@string/_backup"
        app:showAsAction="never|withText" />
    <item
        android:id="@+id/main_more_create_love_panel_item"
        android:contentDescription="@string/create_love_panel"
        android:title="@string/create_love_panel"
        app:showAsAction="never" />

    <item
        android:id="@+id/main_more_set_wallpaper_item"
        android:title="@string/set_wallpaper"
        app:showAsAction="never" />
</menu>