<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_base"
    android:backgroundTint="@color/card_main_color">

    <LinearLayout
        android:id="@+id/dialog_choose_image_content_ll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            style="@style/Base.Text.Title"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_target_height"
            android:background="@drawable/bg_layout_click"
            android:gravity="center"
            android:text="@string/choose_image"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/dialog_choose_image_camera_tv"
            style="@style/Base.Text.Second"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_target_height"
            android:layout_marginTop="@dimen/dp01"
            android:background="@drawable/bg_layout_click"
            android:gravity="center"
            android:text="@string/take_photo" />

        <TextView
            android:id="@+id/dialog_choose_image_album_tv"
            style="@style/Base.Text.Second"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_target_height"
            android:layout_marginTop="@dimen/dp01"
            android:background="@drawable/bg_layout_click"
            android:gravity="center"
            android:text="@string/choose_from_album" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dialog_choose_image_content_ll">

        <TextView
            android:id="@+id/dialog_choose_image_cancel_tv"
            style="@style/Base.Text.Second"
            android:layout_width="match_parent"
            android:layout_height="@dimen/touch_target_height"
            android:background="@drawable/bg_layout_click"
            android:gravity="center"
            android:text="@string/cancel"
            android:textColor="@color/red" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>