<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/Base.Layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_card_white">

    <!-- 屏幕显示时间 -->

    <TextView
        android:id="@+id/notification_screen_title_tv"
        style="@style/Base.Text.Title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/notification_screen_title" />

    <LinearLayout
        android:id="@+id/notification_screen_content_ll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/notification_screen_title_tv"
        android:layout_marginTop="@dimen/margin_text_layout"
        android:orientation="vertical">

        <LinearLayout
            style="@style/Base.Layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_normal_height"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/notification_screen_1_tv"
                style="@style/Base.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_screen_1_hint" />

            <TextView
                android:id="@+id/notification_screen_time_tv"
                style="@style/Base.Text.Second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            style="@style/Base.Layout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_normal_height"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/notification_screen_2_tv"
                style="@style/Base.Text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/notification_screen_2_hint" />

            <TextView
                android:id="@+id/notification_screen_duration_tv"
                style="@style/Base.Text.Second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>