<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_dialog_bottom"
    android:orientation="vertical">

    <EditText
        android:id="@+id/et_edf_add_content"
        style="@style/NoteBookAppTheme.EditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_edit_bottom"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        tools:ignore="LabelFor" />


    <RelativeLayout
        android:id="@+id/rl_edf_add_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_layout">

        <TextView
            android:id="@+id/tv_edf_add_save"
            style="@style/NoteBookAppTheme.Text.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:text="@string/_save" />

        <LinearLayout
            android:id="@+id/ll_edf_add_bottom_left_icon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="@dimen/margin_text_layout"
            android:layout_toStartOf="@id/tv_edf_add_save"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_edf_add_content_happen_day"
                style="@style/NoteBookAppTheme.ImageView.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/day_event_happen_day"
                android:src="@drawable/ic_baseline_today_24" />

            <ImageView
                android:id="@+id/iv_edf_add_content_loop"
                style="@style/NoteBookAppTheme.ImageView.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_layout"
                android:contentDescription="@string/day_event_loop_icon"
                android:src="@drawable/ic_baseline_loop_24" />

            <ImageView
                android:id="@+id/iv_edf_add_content_schedule"
                style="@style/NoteBookAppTheme.ImageView.Icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_layout"
                android:contentDescription="@string/day_event_loop_icon"
                android:src="@drawable/ic_baseline_schedule_24" />
        </LinearLayout>

    </RelativeLayout>

</LinearLayout>