<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/music_player_content_ll"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/image_icon_padding_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/music_player_seek_ll"
            style="@style/Base.Layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <SeekBar
                android:id="@+id/music_player_seek_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_text_layout" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp02"
                android:paddingStart="@dimen/dp12"
                android:paddingEnd="@dimen/dp12">

                <TextView
                    android:id="@+id/music_player_seek_progress_tv"
                    style="@style/Base.Text.Hint"
                    android:layout_width="@dimen/dp36"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/_base_duration_time" />

                <View
                    android:layout_width="wrap_content"
                    android:layout_height="1dp"
                    android:layout_centerVertical="true"
                    android:layout_toStartOf="@id/music_player_seek_duration_tv"
                    android:layout_toEndOf="@id/music_player_seek_progress_tv" />

                <TextView
                    android:id="@+id/music_player_seek_duration_tv"
                    style="@style/Base.Text.Hint"
                    android:layout_width="@dimen/dp36"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:text="@string/_base_duration_time" />
            </RelativeLayout>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/music_player_controller_rl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_text">

            <ImageView
                android:id="@+id/music_player_controller_play_iv"
                style="@style/Base.ImageView.Icon"
                android:layout_width="@dimen/image_icon_size"
                android:layout_height="@dimen/image_icon_size"
                android:layout_centerInParent="true"
                android:contentDescription="@string/_play_music"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_play_arrow_24" />

            <ImageView
                android:id="@+id/music_player_controller_previous_iv"
                style="@style/Base.ImageView.Icon"
                android:layout_width="@dimen/image_icon_size"
                android:layout_height="@dimen/image_icon_size"
                android:layout_marginEnd="@dimen/margin_layout"
                android:layout_toStartOf="@id/music_player_controller_play_iv"
                android:contentDescription="@string/_previous_music"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_skip_previous_24" />

            <ImageView
                android:id="@+id/music_player_controller_next_iv"
                style="@style/Base.ImageView.Icon"
                android:layout_width="@dimen/image_icon_size"
                android:layout_height="@dimen/image_icon_size"
                android:layout_marginStart="@dimen/margin_layout"
                android:layout_toEndOf="@id/music_player_controller_play_iv"
                android:contentDescription="@string/_next_music"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_skip_next_24" />

        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>